--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jeecgframework</groupId>
 	<artifactId>jeecg</artifactId>
@@ -77,7 +77,7 @@
 		<jacob.version>1.18</jacob.version>
 		<!-- highchart export -->
 		<xercesImpl.version>2.7.1</xercesImpl.version>
-		<batik-codec.version>1.7</batik-codec.version>
+		<batik-codec.version>1.13</batik-codec.version>
 		<xstream.version>1.4.6</xstream.version>
 		<!-- jsoup HTML parser  -->
 		<jsoup.version>1.8.3</jsoup.version>
